# kae

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  _utils.py  check_clang_format.py  check_clang_tidy.py  format_all.py
.github/: problem_matchers.json
.github/workflows/: main.yml
cmake/: cpp_compiler.cmake  cpp_flags.cmake  cpp_test.cmake  cpp_warnings.cmake  download.cmake  file_embed.cmake  file_embed.h  set_defaults.cmake  test_cpp.cmake  third_party.cmake
cmake/kae/: add_clang_tests.cmake  asm_flags.cmake  check_clang_format.py  check_clang_tidy.py  cpp_compiler.cmake  cpp_flags.cmake  cpp_test.cmake  cpp_warnings.cmake  file_embed.asm  file_embed.cmake  set_default.cmake  third_party.cmake
include/kae/: any_detail.h  bit_cast.h  circular.h  config.h  exception.h  flag.h  is_pack_same.h  logging.h  make_array.h  pp.h  scope_exit.h  static_function.h
kae/: CMakeLists.txt
kae/include/kae/: any.h  c_ptr.h  config.h  consume_queue.h  exception.h  function.h  function_ref.h  logger.h  os.h  pp.h  scope_exit.h  static_function.h  task.h  thread_pool.h  unique_ptr_cast.h  vec_detail.h
kae/include/utils/: any_detail.h  bind_front.h  circular.h  consume_queue.h  flag.h  function.h  global_handle.h  guarded.h  logger.h  logging.h  make_array_detail.h  math.h  matrix.h  pp.h  rand.h  resource_manager.h  same_traits.h  scope_exit.h  span.h  uninitialized.h  vec.h
kae/src/: any_detail.cpp  config.cpp  exception.cpp  logger.cpp  logging.cpp  os.cpp  rand.cpp  resource_manager.cpp  scope_exit.cpp  thread_pool.cpp
kae/test/: any.test.cpp  bind_front.test.cpp  circular.test.cpp  config.test.cpp  function_ref.test.cpp  guarded.test.cpp  resource_manager.test.cpp  scope_exit.test.cpp  span.test.cpp  static_function.test.cpp  thread_pool.test.cpp  uninitialized.test.cpp  vec.test.cpp
src/: any.cpp  exception.cpp  logger.cpp  logging.cpp  rand.cpp  thread_pool.cpp
test/: circular.test.cpp  function.test.cpp  global_handle.test.cpp  make_array.test.cpp  math.test.cpp  matrix.test.cpp  thread_pool.test.cpp  uninitialized.test.cpp
utils/include/utils/: any.h  any_detail.h  bind_front.h  bit_cast.h  c_ptr.h  circular.h  config.h  consume_queue.h  exception.h  flag.h  function.h  function_ref.h  global_handle.h  guarded.h  is_pack_same.h  logger.h  logging.h  make_array.h  make_array_detail.h  math.h  matrix.h  os.h  pp.h  rand.h  resource_manager.h  same_traits.h  scope_exit.h  span.h  static_function.h  task.h  thread_pool.h  uninitialized.h  unique_ptr_cast.h  vec.h  vec_detail.h
utils/src/: any.cpp  any_detail.cpp  config.cpp  exception.cpp  logger.cpp  logging.cpp  os.cpp  rand.cpp  resource_manager.cpp  scope_exit.cpp  thread_pool.cpp
utils/test/: any.test.cpp  bind_front.test.cpp  circular.test.cpp  config.test.cpp  function.test.cpp  function_ref.test.cpp  global_handle.test.cpp  guarded.test.cpp  make_array.test.cpp  math.test.cpp  matrix.test.cpp  resource_manager.test.cpp  scope_exit.test.cpp  span.test.cpp  static_function.test.cpp  thread_pool.test.cpp  uninitialized.test.cpp  vec.test.cpp
